[gd_scene load_steps=3 format=3 uid="uid://uwoeisn62r5h"]

[ext_resource type="Script" uid="uid://cyvueaf73p0jo" path="res://source/player_detection_area_2d.gd" id="1_lpbh0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ah1pl"]
radius = 100.0

[node name="PlayerDetectionArea2D" type="Area2D"]
script = ExtResource("1_lpbh0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 3.5)
shape = SubResource("CircleShape2D_ah1pl")
debug_color = Color(0.941486, 0.723186, 7.70092e-07, 0.41960785)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
